...
        android:layout_height="wrap_content"
        android:fillViewport="true">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_layout"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
...
                android:orientation="vertical"
                android:background="#E453AEF6">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toolbar"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:background="#E453AEF6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
...

                        <ImageView
                            android:layout_width="47dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="215dp"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/home_cart"
                            app:srcCompat="@drawable/cart"/>


                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>
...

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
...
                android:text="Top Products"
                android:textSize="23dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

            <ListView
                android:id="@+id/productslist"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewAllProducts"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:text="VIEW ALL"
                android:textSize="18dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
...
